# MexCmake

./: CMakeLists.txt  README.md  explore.c  readBinFile.cpp
